<resources>
    <string name="launcher_name">PIA VPN</string>
    <string name="app_name">VPN by Private Internet Access</string>
    <string name="menu_settings">Settings</string>
    <string name="rportsummary">Using %s port for connection</string>
    <string name="lportsummary">Using local port %s for connection</string>
    <string name="lportrandom">Using random local port for connection</string>
    <string name="server_selection">Server Selection</string>
    <string name="auto_rport">Using automatic port selection</string>
    <string name="automatic_server_selection_main">Automatic</string>
    <string name="automatic_server_selection_main_region">Automatic (%1$s)</string>
    <string name="prompt_login">ie p1234567</string>
    <string name="use_udp_summary">UDP will be used to connect</string>
    <string name="use_tcp_summary">TCP will be used to connect</string>
    <string name="use_tcp">Use TCP</string>
    <string name="select_port">Select the port to connect to privateinternetaccess.com</string>
    <string name="remote_port">Remote Port</string>
    <string name="remote_port_cap">FORWARDED PORT</string>
    <string name="remote_port_vpn_ip">VPN IP</string>
    <string name="local_port">Local port</string>
    <string name="connect_onstart">Connect when app is started</string>
    <string name="oneclickconnect">1-click connect</string>
    <string name="connect_on_boot">Connect on boot</string>
    <string name="portforwarding">Request port forwarding</string>
    <string name="portforwarding_summary">Will allow incoming connections to your mobile device over an external port</string>
    <string name="portfwderror">Error requesting forwarding port: %s</string>
    <string name="mace_toggle">Mace Ad Blocker</string>
    <string name="killswitch">VPN Kill Switch</string>
    <string name="killswitchsummary">Disables your internet connection when the VPN disconnects.</string>
    <string name="killswitchtext">INTERNET KILLSWITCH ENABLED</string>
    <string name="killswitchstatus_description">Our Internet Killswitch doesn\'t allow unprotected Internet activity. Wait for reconnection, connect to our VPN service or disable the killswitch to restore Internet connectivity.</string>
    <string name="requestingportfw">Requesting forwarded port...</string>
    <string name="killswitch_button">Disable</string>
    <string name="action_sign_in_short">Login</string>
    <string name="login">LOGIN</string>
    <string name="logout">Log out</string>
    <string name="state_gen_config">Generating configuration</string>
    <string name="user_pw_invalid">Username/Password invalid</string>
    <string name="replace_login_title">Replace login information</string>
    <string name="replace_login_msg">Replace login information with new login information? (New username: %1$s, old username: %2$s)</string>
    <string name="subscription_expires_in">Your subscription expires in</string>
    <string name="subscription_expired">Your subscription is</string>
    <string name="per_app_settings">Per App Settings</string>
    <string name="tv_per_app_settings">PER APP SETTINGS</string>
    <string name="username_password_already_saved">Username and Password already saved!</string>
    <string name="invalid_email_signup">You must provide a valid email address</string>
    <string name="buyvpn_url_localized">https://www.privateinternetaccess.com/pages/buy-vpn/</string>
    <string name="localport_warning">Local port must be between 1024 and 65535</string>
    <string name="notanumber_localport">Illegal number format for local port</string>
    <string name="notanumber_proxyport">Illegal number format for proxy port</string>
    <string name="thankyou_monthly">Thank you for subscribing to monthly vpn!</string>
    <string name="thankyou_yearly">Thank you for subscribing to yearly vpn!</string>
    <string name="purchase_signing_up">Signing up..</string>
    <string name="purchase_loading">Loading</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_confirmation_text">Logging out will terminate an active VPN connection and leave you unprotected</string>
    <string name="expiry_notification_title">Your subscription expires soon.</string>
    <string name="expiry_notification_onnemonth">You have less than one month left. Renew to stay protected.</string>
    <string name="expiry_notification_oneweek">You have less than one week left. Renew to stay protected.</string>
    <string name="expirty_notification_threedays">You have less than three days left. Renew to stay protected.</string>
    <string name="expirty_notification_oneday">You have less than one day left. Renew to stay protected.</string>
    <string name="error_renew_trial">Trial accounts are not eligible for renewal. Please purchase a new account upon expiry to continue service.</string>
    <string name="error_renew_expired">Your account is inactive and cannot accept new payments. Create a new account by logging out and signing up again.</string>
    <string name="pending_purchase_found">Pending In App purchase found. Login to renew your current subscription.</string>
    <string name="account_not_renewable">Your account cannot be renewed or does renew automatically</string>
    <string name="error_subscribing">"Error purchasing: %1$s "</string>
    <string name="error_active_subscription">You already have an active subscription!</string>
    <string name="error_invalid_auth">Something went wrong. Please try logging in again.</string>
    <string name="usemssfix">Will slightly lower the IP packet size to improve compatibility with some routers and mobile networks.</string>
    <string name="mssfixsummary">Use small packets</string>
    <string name="settings_account_bottom_text">Get the Private Internet Access app for your other devices and use the above username to login and secure your connection.</string>
    <string name="settings_account_bottom_text_4">Get the Private Internet Access app for your other devices and use the above username to login and secure your connection.</string>
    <string name="update_email">Update email</string>
    <string name="email_sucessfully_changed">Email address successfully changed</string>
    <string name="copy_toast_text">Text Copied to Clipboard</string>
    <string name="current_region">CURRENT REGION</string>
    <string name="full_licenses">Full licenses</string>
    <string name="email">Email</string>
    <string name="please_wait">Please wait</string>
    <string name="still_connecting">Still trying to connect</string>
    <string name="account_details_password_bottom_text">Tap \"eye\" to reveal. Tap again to copy Password to clipboard.</string>
    <string name="user_x_vs_p_error">Please make sure you are logging in with your main username, which should start with \"p\" (e.g. p12345)</string>
    <string name="vpn_revoke_text">PIA\'s VPN permission has been revoked. VPN, Internet killswitch and security are not active. Please tap here to restart this service and secure your internet connection.</string>
    <string name="vpn_revoke_title">PIA VPN stopped</string>
    <string name="login_operation_failed">Failure to Login. Please try again later.</string>
    <string name="no_internet_connection_available">No internet connection is available</string>
    <string name="no_username_or_password">You must enter a username and password</string>
    <string name="please_unlock_your_device">Please unlock your device</string>
    <string name="please_unlock_your_device_message">To view the password or update your account information.</string>
    <string name="settings_mace">PIA MACE™</string>
    <string name="settings_mace_summary">Will block ads, trackers and malware while you\'re connected to the VPN</string>
    <string name="qs_title">Connect to PIA</string>
    <string name="not_logged_in">not logged in</string>
    <string name="qs_disconnect">Disconnect VPN (%s)</string>
    <string name="qs_disconnect_nolocation">Disconnect VPN</string>
    <string name="menu_about">About</string>
    <string name="reconnect_vpn">Reconnect the VPN to apply this change</string>
    <string name="error_account_info">Failed to find account information</string>
    <string name="error_pinging_while_connected">Unable to update latency while being connected to the VPN</string>
    <string name="allows_port_forwarding">Allows Port Forwarding</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="application_information">APPLICATION INFORMATION</string>
    <string name="data_encyrption">Data encryption</string>
    <string name="data_auth">Data authentication</string>
    <string name="handshake">Handshake</string>
    <string name="preference_encryption">ENCRYPTION</string>
    <string name="send_debug_log">Send debug information to support</string>
    <string name="preferences_widget_title">Widget Settings</string>
    <string name="preferences_widget_summary">Make our widgets work with your home screen</string>
    <string name="preference_application_settings">GENERAL SETTINGS</string>
    <string name="preference_vpn_settings">VPN SETTINGS</string>
    <string name="preference_haptic_title">Haptic feedback on connect</string>
    <string name="preference_connect_on_boot_summary">Connect on system start</string>
    <string name="preference_haptic_feedback_summary">Vibrate on connection clicked</string>
    <string name="blockipv6_summary">Use an alternative method for preventing IPv6 leaks. Required to block IPv6 leaks on Android &lt; 5.0.</string>
    <string name="blockipv6">Aggressive IPv6 blocking</string>
    <string name="preference_reset_settings">Reset settings to default</string>
    <string name="preference_app_theme">Dark Theme</string>
    <string name="block_locallan_off">Access to local network will be allowed. Some apps (such as the Google app) might leak and report your real IP.</string>
    <string name="block_locallan_on">Access to local networks will be blocked</string>
    <string name="block_locallan">Block local network</string>
    <string name="androidalwayson">Block Connections Without VPN</string>
    <string name="androidalwaysonsummary">Android includes a better alternative to Killswitch functionality, click for more information</string>
    <string name="preference_blocking">BLOCKING</string>
    <string name="preference_connect_proxy">Connect via proxy</string>
    <string name="preference_connect_proxy_app">Selected proxy app</string>
    <string name="preference_connect_proxy_summary">Make sure you exclude the app you are using to connect in the per app settings</string>
    <string name="preference_proxy_port">Proxy port</string>
    <string name="proxy_settings_title">PROXY SETTINGS</string>
    <string name="preference_vpn_log_title">View VPN debug log</string>
    <string name="preference_vpn_log_summary">Advanced user view to see VPN log</string>
    <string name="preference_app_update_title">Connect on app update</string>
    <string name="preference_app_update_message">After the app is updated, the app will autoconnect to keep you protected.</string>
    <string name="trusted_wifi_title">Trusted Wifi</string>
    <string name="trusted_wifi_message">The VPN will autoconnect on all wifi networks except those whitelisted by the user</string>
    <string name="settings_protocol">Protocol</string>
    <string name="protocol_ovpn">OpenVPN</string>
    <string name="dip_menu_title">Dedicated IP</string>
    <string name="dip_description">Activate your Dedicated IP by pasting your token in the form below. If you\'ve recently purchased a dedicated IP, you can generate the token by going to the PIA website.</string>
    <string name="dip_your_header">YOUR DEDICATED IPS</string>
    <string name="dip_activate">Activate</string>
    <string name="dip_enter_token_hint">Paste your token here</string>
</resources>